idea/testData/checker/regression/AnnotationOnNamedParameterOfFunctionType.kt
fun <K, V> intercept(<warning>block</warning>: (<error descr="[UNSUPPORTED] Unsupported [annotation on parameter in function type]">@A</error> key: K, (K) -> V) -> V) {

}

annotation class A